[package]
name = "node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snowflake"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { workspace = true }
proto = { workspace = true }
rustls = "0.23.2"
rustls-pemfile = "2.1.1"
log = "0.4.21"
webpki-roots = "0.26.1"
rustls-pki-types = "1.3.1"
openssl = "0.10.72"
sha2 = "0.10.8"
futures = "0.3.30"
bs58 = { version = "0.5.0", features = ["cb58"] }
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.114"
phf = { version = "0.11.3", features = ["macros"] }
flume = "0.11.0"
zstd = "0.13.0"
async-recursion = "1.1.0"
ripemd = "0.1.3"
rand = "0.9.1"
console-subscriber = "0.4.1"
tracing-subscriber = "0.3.18"
tokio = { version = "1.44.2", features = ["full", "net"] }
thiserror = "2.0.12"
blst = "0.3.12"
indexmap = "2.9.0"
tokio-rustls = "0.26.0"
hex = "0.4.3"
rand_mt = "5.0.0"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.17.0"
paste = "1.0.15"
dhat = "0.3.3"
public-ip = "0.2.2"
jsonrpsee = { version = "0.24.9", features = ["macros", "server"] }
alloy = { version = "0.13.0", features = ["full"] }
current_platform = "0.2.0"
ruint = "1.14.0"
sha256 = "1.6.0"
unsigned-varint = "0.8.0"
serde-big-array = "0.5.1"
pretty_assertions = "1.4.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
#criterion = "0.3"

# [[bench]]
# name = "signed_tx"
# harness = false

[package.metadata.cargo-machete]
ignored = ["proto"]

[features]
dhat-heap = []
dhat-ad-hoc = []
