[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[lib]
name = "proto_lib"
path = "src/lib.rs"

[dependencies]
prost = "0.13.5"
prost-build = { version = "0.13.5" }
prost-types = "0.13.5"

[build-dependencies]
prost-build = { version = "0.13.5" }

[package.metadata.cargo-machete]
ignored = ["prost-build"]
